[package]
name = "meteora"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2021"
rust-version = "1.71"
description = "A note taking app"


[dependencies]
egui = "0.23"
eframe = { version = "0.23", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui_extras = { version = "0.23", features = ["datepicker"] }
egui-notify = "0.10"
ehttp = "0.3"
getrandom = { version = "0.2", features = ["js"] }

chrono = { version = "0.4", features = ["wasmbind", "serde"] }
rand = { version = "0.8" }
rand_chacha = "0.3"
# reqwest = { version = "0.11", features = ["blocking", "json"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# egui_commonmark = { version = "0.8.0", features = ["fetch"] }
magic-crypt = "3.1.12"
anyhow = "1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[package.metadata.bundle]
icon = ["assets/icon-256.png"]